タブのテキスト変更

--- a/syadoba.html
+++ b/syadoba.html
@@ -606,9 +606,9 @@
 <body>
   <main>
     <div class="tab-navigation">
-      <button class="tab-navigation-button active" data-tab="counter-section" aria-controls="counter-section" aria-selected="true">カウンタ</button>
-      <button class="tab-navigation-button" data-tab="record-section" aria-controls="record-section" aria-selected="false">戦績</button>
-      <button class="tab-navigation-button" data-tab="storage-section" aria-controls="storage-section" aria-selected="false">読込/保存</button>
+      <button class="tab-navigation-button active" data-tab="counter-section" aria-controls="counter-section" aria-selected="true">プレイ中</button>
+      <button class="tab-navigation-button" data-tab="record-section" aria-controls="record-section" aria-selected="false">対戦記録</button>
+      <button class="tab-navigation-button" data-tab="storage-section" aria-controls="storage-section" aria-selected="false">データ管理</button>
     </div>
 
     <div class="two-column-layout">
@@ -681,7 +681,7 @@
       </section>
 
       <section class="panel record-panel tab-content flex-column-item record-panel-column" id="record-section" style="display: none;">
-        <h3 style="flex-shrink: 0;">戦績記録</h3>
+        <h3 style="flex-shrink: 0;">対戦記録</h3>
         <form id="add-record-form" class="app-form" style="flex-shrink: 0;">
           <div class="form-columns">
             <div class="form-left">
