--- a/syadoba.html
+++ b/syadoba.html
@@ -319,6 +319,15 @@
     }
     .file-input-button:hover { background: #d0d7de; }
     .data-management-panel input[type="file"] { display: none; }
+		
+		/* Adsense */
+    #ad {
+		   text-align: center;
+		   color: #aaa;
+	     font-size: 90%;
+			 max-width: 336px;
+			 margin: 40px auto 24px;
+		}
 
     /* タブナビゲーション */
     .tab-navigation {
@@ -678,6 +687,19 @@
 					  </button>
 					</div>
           </div>
+				<div id="ad">
+					スポンサードリンク
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+							<!-- 記事下レスポンシブ -->
+							<ins class="adsbygoogle"
+									 style="display:block"
+									 data-ad-client="ca-pub-3575252598876356"
+									 data-ad-slot="6223968026"
+									 data-ad-format="rectangle"></ins>
+							<script>
+							(adsbygoogle = window.adsbygoogle || []).push({});
+							</script>
+        </div>
       </section>
 
       <section class="panel record-panel tab-content flex-column-item record-panel-column" id="record-section" style="display: none;">
