--- a/syadoba.html
+++ b/syadoba.html
@@ -897,7 +897,7 @@
                 </div>
             </details>
         </div>
-
+    <h3 style="margin-bottom:8px;">記録一覧</h3>
 		<div class="record-table-wrapper" id="match-record-table-wrapper">
         <table id="match-record-table" class="data-table">
           <thead>
