--- a/syadoba.html
+++ b/syadoba.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link href='./Sv_icon.png' rel='icon' type='image/x-icon'/>
-  <link href='./Sv_icon.png' rel='shortcut icon'/>
-  <link href='./Sv_icon.png' rel='apple-touch-icon'/>
-  <title>シャドウバースWB 対戦支援ツール</title>
+  <link href='./WB_icon.png' rel='icon' type='image/x-icon'/>
+  <link href='./WB_icon.png' rel='shortcut icon'/>
+  <link href='./WB_icon.png' rel='apple-touch-icon'/>
+  <title>WBログノート | シャドウバースWB 対戦支援</title>
   <style>
     /* 基本スタイル */
     body {
