--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="top-module" class="card-design">
             <div class="profile-section">
                 <!-- プロフィールアイコン -->
-                <img class="profile-icon" src="https://gyazo.com/821ae163e2ae917475d3dc5fe2b94732/thumb/350#.png" alt="morvra lists icon">
+                <img class="profile-icon" src="./crow_icon.png" alt="morvra lists icon">
                 
                 <!-- ナビゲーションアイコンリスト -->
                 <ul class="nav-icons">
