--- a/taglist.html
+++ b/taglist.html
@@ -15,6 +15,15 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0G0NP5Z9M9"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-0G0NP5Z9M9');
+    </script>
 
     <!--#include file="header.html" -->
     <div id="header"></div>
